<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_size"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textColor="@color/primaryText" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/surface"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <Spinner
                android:id="@+id/font_size_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"
            android:textColor="@color/onPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:backgroundTint="@color/primary"
            android:layout_marginTop="16dp"
            android:textColor="@color/onPrimary"
             />

    </LinearLayout>

</ScrollView>
